--- a/slides/02-Introduction/index.mdx
+++ b/slides/02-Introduction/index.mdx
@@ -8,6 +8,14 @@ import Translate from 'components/Translate'
 
 <Layout>
     <h1>
+      <Translate id="introduction.title" />
+    </h1>
+</Layout>
+
+---
+
+<Layout>
+    <h1>
       <Translate id="introduction.storytime" />
     </h1>
 </Layout>
