--- a/slides/04-PeopleAgainstTools/index.mdx
+++ b/slides/04-PeopleAgainstTools/index.mdx
@@ -1,15 +1,135 @@
 import Layout from 'components/Layout'
-<Layout>
-    <h1>
-      ... mais d'autres conflits se déclenchent
-    </h1>
+import FullScreenVideo from 'components/FullScreenVideo'
+import Container from 'components/Container'
+import Translate from 'components/Translate'
+import TweetEmbed from 'react-tweet-embed'
+import { Appear } from '@mdx-deck/components'
+
+<FullScreenVideo name="still-war" />
+
+---
+
+<Layout video="still-war">
+  <Container>
+    <Appear>
+      <div>
+        <Translate id="peopleAgainstTools.warIsntOver" />
+      </div>
+    </Appear>
+  </Container>
 </Layout>
 
 ---
+
 <Layout>
-<blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Why is CSS the worst thing ever made. Whoever designed this language fucking sucks</p>&mdash; Ary | PANDORA HEARTS SZN (@AryTheDoggo) <a href="https://twitter.com/AryTheDoggo/status/1129338729347375104?ref_src=twsrc%5Etfw">May 17, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <TweetEmbed id="1132681934314852352" placeholder={'loading'} />
 </Layout>
+
 ---
+
 <Layout>
-  <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">CSS doesn’t suck - Andy Bell <a href="https://t.co/aLCmCABDhk">https://t.co/aLCmCABDhk</a></p>&mdash; Moses Samuel (@_MosesSupposes_) <a href="https://twitter.com/_MosesSupposes_/status/1129763825673224192?ref_src=twsrc%5Etfw">May 18, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <TweetEmbed id="1131922715311562753" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1130538969614180356" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1074325386568228869" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1036079684235259904" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1083098136288129024" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1133113533216854016" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="854401169980100608" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="803863184289439744" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="717717543750860802" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="717814211485769728" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="686651368736698370" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1133520409641439232" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1130575646776803328" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1133638868715167745" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1133512304857944065" placeholder={'loading'} />
+</Layout>
+
+
+---
+
+<Layout>
+  <TweetEmbed id="754045216449933312" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="1006431406204112896" placeholder={'loading'} />
+</Layout>
+
+---
+
+<Layout>
+  <TweetEmbed id="820703602096283648" placeholder={'loading'} />
 </Layout>
