--- a/slides/07-Conclusion/index.mdx
+++ b/slides/07-Conclusion/index.mdx
@@ -1,5 +1,26 @@
+import Layout from 'components/Layout'
+import { Appear } from '@mdx-deck/components'
 import FullScreenVideo from 'components/FullScreenVideo'
+import Translate from 'components/Translate'
+
+<Layout>
+  <h1><Translate id="conclusion.peace"/></h1>
+</Layout>
 
 ---
 
-<FullScreenVideo name="everyone-torment" />
+<FullScreenVideo orientation="portrait" name="me" />
+  <div style={{
+    position: 'absolute',
+    bottom: '60px',
+    left: '50%',
+    transform: 'translateX(-50%)',
+    zIndex: 2,
+    display: 'flex',
+    flexDirection: 'column',
+    alignItems: 'center',
+    listStyle: 'none',
+    textShadow: "blue 0px 0 0.5em",
+  }}>
+    That's all, folks.
+  </div>
